--- a/QuanLyChuyenBay/template/cart.html
+++ b/QuanLyChuyenBay/template/cart.html
@@ -2,7 +2,7 @@
 
 
 {% block content %}
-<h1 class="text-center text-success">Giỏ Hàng</h1>
+<h1 class="text-center text-success mt-2 mb-3">Giỏ Hàng</h1>
 {% if 'cart' in session and session['cart'] %}
 
 <table class="table">
