--- a/QuanLyChuyenBay/template/layout/header.html
+++ b/QuanLyChuyenBay/template/layout/header.html
@@ -21,13 +21,11 @@
                     <h5>
                         <a class="nav-link" href="/order">
                             {% if current_user.is_authenticated %}
-                            {% if current_user.isAdmin() %}
+                            {% if current_user.isAdmin() or current_user.isStaff() %}
                             Bán vé
                             {%else%}
                             Mua vé
                             {%endif%}
-                            {%else%}
-                            Mua vé
                             {%endif%}
                         </a>
                     </h5>
@@ -65,22 +63,36 @@
                 </ul>
                 {% endif %}
                 {% if current_user.is_authenticated %}
-                {% if current_user.isAdmin()%}
+
+                {% if current_user.isAdmin() or current_user.isStaff()%}
                 <li class="nav-item">
-                    <h5><a class="nav-link text-secondary" href="{{ url_for('AddFlightSchedule') }}"> Lập lịch chuyến
-                        bay</a></h5>
-                </li>
-                <li class="nav-item">
-                    <h5><a class="nav-link text-secondary" href="{{ url_for('RuleChange') }}"> Thay đổi quy định</a>
+                    <h5>
+                        <a class="nav-link text-secondary" href="{{ url_for('AddFlightSchedule') }}">
+                            Lập lịch chuyến bay
+                        </a>
                     </h5>
                 </li>
-                {% else %}
+                {% endif %}
+
+                {% if current_user.isAdmin() %}
                 <li class="nav-item">
+                    <h5>
+                        <a class="nav-link text-secondary" href="{{ url_for('RuleChange') }}">
+                            Thay đổi quy định
+                        </a>
+                    </h5>
+                </li>
+                {%endif%}
+
+                {% if current_user.isUser()%}
+                <li class="nav-item">
+
                     <h5><a class="nav-link text-secondary" href="{{ url_for('cart') }}">&#128722; Giỏ hàng <span
                             class="badge bg-danger cart-counter">{{ cart.total_quantity }}</span></a></h5>
                 </li>
                 {%endif%}
                 {%endif%}
+
             </ul>
         </div>
     </div>
