Big Prj CNPM Final(maybe)

--- a/QuanLyChuyenBay/template/admin/stats.html
+++ b/QuanLyChuyenBay/template/admin/stats.html
@@ -43,7 +43,7 @@
                 {% else%}
                 0
                 {% endif%}
-                </th>
+<!--                tinh ti le-->
                 <th>
                     {%if s[2]%}
                     {{ ((s[2]/tong_doanh_thu) *100)|round(3)}}%
